src/objects/Clinical_Time_Restriction__c.object
<CustomObject>
    <description>This contains a row for every time that a room or doctor is unavailable on the calendar</description>
    <fields>
        <fullName>Block_Date__c</fullName>
        <label>Block Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Block_Note__c</fullName>
        <label>Block Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Block_Reason__c</fullName>
        <label>Block Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clean Up</fullName>
                </value>
                <value>
                    <fullName>Clinical Conflict</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Patient Hold</fullName>
                </value>
                <value>
                    <fullName>Personal Conflict</fullName>
                </value>
                <value>
                    <fullName>Private Practice Patient</fullName>
                </value>
                <value>
                    <fullName>Private Practice Patient IV</fullName>
                </value>
                <value>
                    <fullName>Private Practice Patient LA</fullName>
                </value>
                <value>
                    <fullName>Sick</fullName>
                </value>
                <value>
                    <fullName>Staffing</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Block_Type__c</fullName>
        <label>Block Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Room</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Clinical Time Restrictions</relationshipLabel>
        <relationshipName>Clinical_Time_Restrictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Room</label>
        <referenceTo>Clinical_Room__c</referenceTo>
        <relationshipLabel>Clinical Time Restrictions</relationshipLabel>
        <relationshipName>Clinical_Time_Restrictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Hour_Int__c</fullName>
        <formula>value(End_Hour__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Hour__c</fullName>
        <label>End Hour</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Minute_Int__c</fullName>
        <formula>value(End_Minute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Minute Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Minute__c</fullName>
        <label>End Minute</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etime__c</fullName>
        <formula>(value(End_Hour__c) * 60) + value(End_Minute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Etime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Hour_Int__c</fullName>
        <formula>value(Start_Hour__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Hour__c</fullName>
        <label>Start Hour</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Minute_Int__c</fullName>
        <formula>value(Start_Minute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Minute Int</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Minute__c</fullName>
        <label>Start Minute</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stime__c</fullName>
        <formula>(value(Start_Hour__c) * 60) + value(Start_Minute__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clinical_Time_Restrictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Clinical Time Restriction</label>
    <nameField>
        <displayFormat>CTR-{0000}</displayFormat>
        <label>Clinical Time Restriction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Time Restrictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>